- html 컨텐츠 수정

--- a/assets/01-html/04-grouping/07-dt_element.html
+++ b/assets/01-html/04-grouping/07-dt_element.html
@@ -8,7 +8,7 @@
 	<section class="mt_xxl">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			dt(definition term element)는 정의 목록에서 용어를 구분합니다.<br>
+			<code>&lt;dt&gt;</code>(definition term element)는 정의 목록에서 용어를 구분합니다.<br>
 			이 요소는 <code>&lt;dl&gt;</code> 요소의 자식으로서만 사용할 수 있습니다.<br>
 			보통 이것은 <code>&lt;dd&gt;</code>요소 전에 나오는데, 연속적으로 나오는 여러 개의 <code>&lt;dt&gt;</code>요소는
 			바로 다음에 나오는 <code>&lt;dd&gt;</code>요소에 의해 정의되는 몇 개의 용어를 가리킵니다.<br>
