--- a/assets/01-html/04-grouping/10-figure_element.html
+++ b/assets/01-html/04-grouping/10-figure_element.html
@@ -18,8 +18,8 @@
 			<li>
 				<code>&lt;figure&gt;</code>와 <code>&lt;aside&gt;</code> 차이
 				<div class="line_code mt_sm">
-					<p>내용이 단순히 관련되어(느슨하게) 있고, 필수적인 내용이 아니면 <mark><code>&lt;aside&gt;</code></mark></p>
-					<p>내용이 직접적인 관련이 있지만, 문맥상 그것의 위치가 중요하지 않으면 <mark><code>&lt;figure&gt;</code></mark></p>
+					<p>내용이 단순히 관련되어(느슨하게) 있고, 필수적인 내용이 아니면 <code>&lt;aside&gt;</code></p>
+					<p>내용이 직접적인 관련이 있지만, 문맥상 그것의 위치가 중요하지 않으면 <code>&lt;figure&gt;</code></p>
 				</div>
 			</li>
 		</ol>
