--- a/assets/01-html/05-textLevel/02-em_element.html
+++ b/assets/01-html/05-textLevel/02-em_element.html
@@ -13,7 +13,14 @@
 			하지만, 이 요소는 단순히 이탤릭 타입을 표시하기 위해 사용되어서는 안됩니다.(단순히 이탤릭 타입을 표시하고 싶다면, CSS 스타일링을 사용하세요.)
 		</p>
 		<div class="line_code mt_s">
-			<p class="t_blue italic"><b>CSS 기본값 : em {font-style: italic;}</b></p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>em {</li>
+					<li class="indent">font-style: italic;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
