--- a/assets/01-html/05-textLevel/03-i_element.html
+++ b/assets/01-html/05-textLevel/03-i_element.html
@@ -14,8 +14,15 @@
 			<code>&lt;i&gt;</code> 요소는 평범한 글자와 구분하기 위해 사용됩니다.<br>
 			예를 들면, 기술적인 용어(전문용어), 외국어 문구, 소설속 인물의 생각, 다른 언어의 관용구, 문어체, 서양 문헌에 나오는 배 이름 등이 있습니다.
 		</p>
-		<div class="line_code italic mt_s">
-			<p class="t_blue"><b>CSS 기본값 : i {font-style: italic;}</b></p>
+		<div class="line_code mt_s">
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>i {</li>
+					<li class="indent">font-style: italic;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 		<div class="ol_lst mt_m italic">
 			<strong>다음과 같은 의미 요소(semantic element) 중에서 사용하기에 적당한 요소를 찾지 못했을 때만 <mark><code>&lt;i&gt;</code></mark> 요소를 사용할 수 있습니다.</strong>
