--- a/assets/01-html/05-textLevel/05-b_element.html
+++ b/assets/01-html/05-textLevel/05-b_element.html
@@ -36,7 +36,14 @@
 			</li>
 		</ol>
 		<div class="line_code mt_m">
-			<p class="t_blue"><b>CSS 기본값 : b {font-weight: bold;}</b></p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>b {</li>
+					<li class="indent">font-weight: bold;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
