--- a/assets/01-html/05-textLevel/07-small_element.html
+++ b/assets/01-html/05-textLevel/07-small_element.html
@@ -13,7 +13,14 @@
 			저작권(copyright)이나 법률적인 내용의 부연 설명이나 작은 페이지를 나타낼 때 사용되도록 변경되었습니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue"><b>CSS 기본값 : small {font-size: smaller;}</b></p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>small {</li>
+					<li class="indent">font-size: smaller;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
