--- a/assets/01-html/05-textLevel/08-s_element.html
+++ b/assets/01-html/05-textLevel/08-s_element.html
@@ -15,7 +15,14 @@
 			하지만 HTML5에서 <code>&lt;s&gt;</code> 요소는 더 이상 정확하지 않거나 관련이 없는 텍스트를 표현하도록 의미를 재정의하여 다시 추가되었습니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue"><b>CSS 기본값 : s {text-decoration: line-through;}</b></p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>s {</li>
+					<li class="indent">text-decoration: line-through;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
