--- a/assets/01-html/05-textLevel/09-cite_element.html
+++ b/assets/01-html/05-textLevel/09-cite_element.html
@@ -21,7 +21,14 @@
 			</li>
 		</ol>
 		<div class="line_code mt_m">
-			<p class="t_blue"><b>CSS 기본값 : cite {font-style: italic;}</b></p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>cite {</li>
+					<li class="indent">font-style: italic;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
