--- a/assets/01-html/05-textLevel/10-sub_element.html
+++ b/assets/01-html/05-textLevel/10-sub_element.html
@@ -10,11 +10,19 @@
 		<p>
 			<code>&lt;sub&gt;</code> 요소는 아랫 첨자(subscript) 텍스트를 표현할 때 사용합니다.<br>
 			<code>&lt;sub&gt;</code> 요소 내부의 텍스트는 일반 텍스트 라인보다 아래쪽에 절반 크기의 작은 문자로 표현되며,<br>
-			이러한 아랫 첨자는 수학 공식(ex) nPr = n!/(n-r)!)이나 분자식, 화학 반응식(ex) 2H2 + O2 &rarr; 2H2O) 등을 표현할 수 있습니다.<br>
+			이러한 아랫 첨자는 수학 공식<i class="t_blue">(ex) nPr = n!/(n-r)!)</i>이나 분자식, 화학 반응식<i class="t_blue">(ex) 2H2 + O2 &rarr; 2H2O)</i> 등을 표현할 수 있습니다.<br>
 			윗 첨자(superscript) 텍스트를 표현할 때는 <code>&lt;sup&gt;</code> 요소를 사용합니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue"><b>CSS 기본값 : sub { vertical-align: sub; font-size: smaller;}</b></p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>sub {</li>
+					<li class="indent">vertical-align: sub;</li>
+					<li class="indent">font-size: smaller;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
