--- a/assets/01-html/05-textLevel/11-sup_element.html
+++ b/assets/01-html/05-textLevel/11-sup_element.html
@@ -11,11 +11,19 @@
 		<p>
 			<code>&lt;sup&gt;</code> 요소는 윗 첨자(superscript) 텍스트를 표현할 때 사용합니다.<br>
 			<code>&lt;sup&gt;</code> 요소 내부의 텍스트는 일반 텍스트 라인보다 윗쪽에 절반 크기의 작은 문자로 표현되며,<br>
-			이러한 윗 첨자는 수학 공식(ex) (a+b)2 = a2 + 2ab + b2)이나 각주(ex) WWW[1]) 등을 표현할 수 있습니다.<br>
+			이러한 윗 첨자는 수학 공식<i class="t_blue">(ex) (a+b)2 = a2 + 2ab + b2)</i>이나 각주<i class="t_blue">(ex) WWW[1])</i> 등을 표현할 수 있습니다.<br>
 			아랫 첨자(subscript) 텍스트를 표현할 때는 <code>&lt;sub&gt;</code> 요소를 사용합니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue"><b>CSS 기본값 : sup {vertical-align: super; font-size: smaller;}</b></p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>sup {</li>
+					<li class="indent">vertical-align: super;</li>
+					<li class="indent">font-size: smaller;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
