--- a/assets/01-html/05-textLevel/12-mark_element.html
+++ b/assets/01-html/05-textLevel/12-mark_element.html
@@ -24,7 +24,15 @@
 			</li>
 		</ol>
 		<div class="line_code mt_m">
-			<p class="t_blue"><b>CSS 기본값 : mark {background-color: yellow; color: black;}</b></p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>mark {</li>
+					<li class="indent">background-color: yellow;</li>
+					<li class="indent">color: black;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
