--- a/assets/01-html/05-textLevel/15-var_element.html
+++ b/assets/01-html/05-textLevel/15-var_element.html
@@ -12,9 +12,14 @@
 			변수 요소 (<code>&lt;var&gt;</code>)는 수학적 표현이나 프로그래밍 변수를 나타냅니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">
-				<b>CSS 기본값 : var {font-style: italic;}</b>
-			</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>var {</li>
+					<li class="indent">font-style: italic;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
