--- a/assets/01-html/05-textLevel/16-abbr_element.html
+++ b/assets/01-html/05-textLevel/16-abbr_element.html
@@ -15,9 +15,14 @@
 			<code>&lt;abbr&gt;</code> 요소 위에 마우스를 올려놓으면 title 속성으로 명시한 단어의 원형이 나타납니다.<br>
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">
-				<b>CSS 기본값 : abbr[title] {text-decoration: underline dotted;}</b>
-			</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>abbr[title] {</li>
+					<li class="indent">text-decoration: underline dotted;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
