--- a/assets/01-html/05-textLevel/21-bdi_element.html
+++ b/assets/01-html/05-textLevel/21-bdi_element.html
@@ -21,9 +21,14 @@
 			<mark>Internet Explorer, Edge, Safari, Opera : No support(지원하지 않음)</mark>
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">
-				<b>CSS 기본값 : bdi {unicode-bidi: -webkit-isolate;}</b>
-			</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>bdi {</li>
+					<li class="indent">unicode-bidi: -webkit-isolate;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
