--- a/assets/01-html/05-textLevel/22-bdo_element.html
+++ b/assets/01-html/05-textLevel/22-bdo_element.html
@@ -13,7 +13,14 @@
 			다른 요소들과는 달리 <code>&lt;bdo&gt;</code> 요소의 dir 속성의 기본값은 부모 요소로부터 상속받지 않는다는 의미를 가지는 auto값으로 자동 설정됩니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : bdo {unicode-bidi: bidi-override;}</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>bdo {</li>
+					<li class="indent">unicode-bidi: bidi-override;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 		<ol class="indent mt_m">
 			<li>
