--- a/assets/01-html/06-embedded/01-iframe_element.html
+++ b/assets/01-html/06-embedded/01-iframe_element.html
@@ -21,7 +21,14 @@
 		</p>
 
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : iframe:focus {outline: none;}</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>iframe:focus {</li>
+					<li class="indent">outline: none;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
@@ -101,7 +108,7 @@
 				<code>&lt;iframe&gt;</code> 요소에 보일 콘텐츠에 대한 추가적인 제한 사항(restrictions)들의 집합을 명시합니다.(security rules for nested content)<br>
 				<code>&lt;iframe&gt;</code> 요소의 sandbox 속성은 HTML5에서 새롭게 추가된 속성입니다.
 			</p>
-			<ul class="dot_lst mt_s">
+			<ul class="dot_lst indent mt_s">
 				<li>실제 존재하지 않는 도메인(오리진)에 속한 것으로 간주하므로 자신이 소속된 도메인과도(allow-scripts에 의해 실행이 가능해져도) 통신할 수 없습니다.</li>
 				<li>플러그인 실행 금지.</li>
 				<li>자바스크립트 사용 금지.</li>
