--- a/assets/01-html/06-embedded/02-img_element.html
+++ b/assets/01-html/06-embedded/02-img_element.html
@@ -21,7 +21,14 @@
 		</p>
 
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : img {display: inline-block;}</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>img {</li>
+					<li class="indent">display: inline-block;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 
 		<div class="view_editor ex_code mt_l" data-target="html/06-embedded/6.2.img_element.html">
