--- a/assets/01-html/06-embedded/03-map_element.html
+++ b/assets/01-html/06-embedded/03-map_element.html
@@ -17,7 +17,14 @@
 			<mark>HTML5.1부터 hreflang, type 속성은 더 이상 지원하지 않습니다.</mark>
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : map {display: inline;}</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>map {</li>
+					<li class="indent">display: inline;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
