--- a/assets/01-html/06-embedded/05-video_element.html
+++ b/assets/01-html/06-embedded/05-video_element.html
@@ -19,10 +19,18 @@
 		<p>
 			<code>&lt;video&gt;</code>는 비디오 재생을 문서에 지원하는 미디어 플레이어를 내장합니다.<br>
 			오디오 컨텐츠에도 <code>&lt;video&gt;</code>를 사용할 수 있지만 <code>&lt;audio&gt;</code> 요소는 보다 적절한 사용자 경험을 제공할 수 있습니다.<br>
-			autoplay가 지정된 경우, preload는 무시됩니다. <span class="reference mt_l"><a href="https://convertio.co/kr/webm-mp4/" target="_blank" title="새창열림">webm to mp4 converter</a></span>
+			autoplay가 지정된 경우, preload는 무시됩니다.<br>
+			<span class="reference mt_l"><a href="https://convertio.co/kr/webm-mp4/" target="_blank" title="새창열림">webm to mp4 converter</a></span>
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : video { display: inline; }</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>video {</li>
+					<li class="indent">display: inline;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
