--- a/assets/01-html/06-embedded/06-audio_element.html
+++ b/assets/01-html/06-embedded/06-audio_element.html
@@ -14,7 +14,14 @@
 			autoplay가 지정된 경우, preload는 무시됩니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : audio { display: inline; }</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>audio {</li>
+					<li class="indent">display: inline;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
