--- a/assets/01-html/06-embedded/09-source_element.html
+++ b/assets/01-html/06-embedded/09-source_element.html
@@ -80,13 +80,13 @@
 			<div class="ol_lst indent mt_s">
 				<ol>
 					<li class="line_code font14">
-						<strong>속성값에 사용할 수 있는 연산자는 다음과 같습니다.</strong>
+						<strong class="mb_sm">속성값에 사용할 수 있는 연산자는 다음과 같습니다.</strong>
 						<p><b>and</b> - AND 연산을 명시합니다.</p>
 						<p><b>not</b> - NOT 연산을 명시합니다.</p>
 						<p><b>,</b> - OR 연산을 명시합니다.</p>
 					</li>
 					<li class="line_code font14 mt_ms">
-						<strong>속성값에 사용할 수 있는 장치는 다음과 같습니다.</strong>
+						<strong class="mb_sm">속성값에 사용할 수 있는 장치는 다음과 같습니다.</strong>
 						<p><b>all</b> - 기본값으로, 모든 미디어 타입의 장치</p>
 						<p><b>aural</b> - 음성 합성 장치</p>
 						<p><b>braille</b> - 점자 기기</p>
@@ -103,79 +103,79 @@
 				<h4 class="mt_ml">속성값에 사용할 수 있는 값은 다음과 같습니다.</h4>
 				<ol>
 					<li class="line_code font14 mt_ms">
-						<strong>width</strong>
+						<strong class="mb_sm">width</strong>
 						<p>대상 디스플레이 영역의 너비를 명시합니다.</p>
 						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (max-width:900px)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
-						<strong>height</strong>
+						<strong class="mb_sm">height</strong>
 						<p>대상 디스플레이 영역의 높이를 명시합니다.</p>
 						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (min-height:600px)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
-						<strong>device-width</strong>
+						<strong class="mb_sm">device-width</strong>
 						<p>대상 디스플레이 또는 종이의 너비를 명시합니다.</p>
 						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (min-device-width:500px)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
-						<strong>device-height</strong>
+						<strong class="mb_sm">device-height</strong>
 						<p>대상 디스플레이 또는 종이의 높이를 명시합니다.</p>
 						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (max-device-height:800px)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
-						<strong>orientation</strong>
+						<strong class="mb_sm">orientation</strong>
 						<p>대상 디스플레이 또는 종이의 방향을 명시합니다.</p>
 						<p>"portrait"는 세로 방향, "landscape"는 가로 방향을 명시합니다.</p>
 						<p>ex) media="print and (orientation:landscape)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
-						<strong>spect-ratio</strong>
+						<strong class="mb_sm">spect-ratio</strong>
 						<p>대상 디스플레이 영역의 너비와 높이의 비율을 명시합니다.</p>
 						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (aspect-ratio:16/9)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
-						<strong>device-aspect-ratio</strong>
+						<strong class="mb_sm">device-aspect-ratio</strong>
 						<p>대상 디스플레이 또는 종이의 장치 너비와 장치 높이의 비율을 명시합니다.</p>
 						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (device-aspect-ratio:16/9)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
-						<strong>color</strong>
+						<strong class="mb_sm">color</strong>
 						<p>대상 디스플레이의 색상 당 비트수를 명시합니다.</p>
 						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (color:4)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
-						<strong>color-index</strong>
+						<strong class="mb_sm">color-index</strong>
 						<p>대상 디스플레이가 처리할 수 있는 색상의 개수를 명시합니다.</p>
 						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (color-index: 512)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
-						<strong>monochrome</strong>
+						<strong class="mb_sm">monochrome</strong>
 						<p>단색 프레임 버퍼에서의 픽셀 당 비트수를 명시합니다.</p>
 						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="screen and (monochrome:3)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
-						<strong>resolution</strong>
+						<strong class="mb_sm">resolution</strong>
 						<p>대상 디스플레이 또는 종이의 화소밀도(pixel density)를 명시합니다.</p>
 						<p>"min-" 접두사로 최솟값, "max-" 접두사로 최대값을 명시할 수 있습니다.</p>
 						<p>ex) media="print and (resolution:360dpi)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
-						<strong>scan</strong>
+						<strong class="mb_sm">scan</strong>
 						<p>TV 디스플레이의 주사법(scanning method)을 명시합니다.</p>
 						<p>"progressive"는 프로그레시브 방식, "interlace"는 인터레이스 방식을 명시합니다.</p>
 						<p>ex) media="tv and (scan:progressive)"</p>
 					</li>
 					<li class="line_code font14 mt_ms">
-						<strong>grid</strong>
+						<strong class="mb_sm">grid</strong>
 						<p>출력 장치가 그리드(grid)인지 비트맵(bitmap)인지를 명시합니다.</p>
 						<p>"1"은 그리드, "0"은 그리드 이외의 장치를 명시합니다.</p>
 						<p>ex) media="projection and (grid:1)"</p>
