--- a/assets/01-html/06-embedded/12-object_element.html
+++ b/assets/01-html/06-embedded/12-object_element.html
@@ -26,8 +26,16 @@
 			몇몇 속성(align, archive, border, classid, codebase, codetype, declare, hspace, standby, vspace)을 더 이상 지원하지 않습니다.<br>
 			또한, <code>&lt;object&gt;</code> 요소가 더 이상 <code>&lt;head&gt;</code> 요소 내에 위치할 수 없게 되었으며, 폼(form)에서 <code>&lt;object&gt;</code> 요소를 사용하거나 제출할 수 있도록 변경되었습니다.
 		</p>
+
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : object:focus {outline: none;}</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>object:focus {</li>
+					<li class="indent">outline: none;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
