--- a/assets/01-html/07-edits/02-ins_element.html
+++ b/assets/01-html/07-edits/02-ins_element.html
@@ -14,7 +14,14 @@
 			이와 같이 <code>&lt;del&gt;</code> 요소와 <code>&lt;ins&gt;</code> 요소는 문서에 대한 업데이트나 수정을 표현할 때 사용하며, 브라우저는 이를 일반 텍스트에 라인을 추가하는 것으로 표현할 것입니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : ins {text-decoration: underline;}</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>ins {</li>
+					<li class="indent">text-decoration: underline;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
