--- a/assets/01-html/08-table/01-table_element.html
+++ b/assets/01-html/08-table/01-table_element.html
@@ -21,7 +21,7 @@
 			<li class="line_code font14"><strong>세로로 이웃한 셀을 합칠 때에는 rowspan 속성을 사용합니다.</strong></li>
 			<li class="line_code font14"><strong>표 제목은 <code>&lt;caption&gt;</code> 태그로 만듭니다.</strong></li>
 			<li class="line_code font14">
-				<strong>deprecated(더 이상 사용되지 않음)속성은 CSS 속성을 사용</strong>
+				<strong class="mb_sm">deprecated(더 이상 사용되지 않음)속성은 CSS 속성을 사용</strong>
 				<p><b>align</b> - CSS 속성값으로 사용</p>
 				<p><b>bgcolor</b> - CSS 속성값으로 사용</p>
 				<p><b>border</b> - CSS 속성값으로 사용</p>
@@ -32,7 +32,7 @@
 				<p><b>width</b> - CSS 속성값으로 사용</p>
 			</li>
 			<li class="line_code font14 mt_s">
-				<strong>
+				<strong class="mb_sm">
 					summary - 테이블을 직접 확인할 수 없는 경우에 대비하여<br>
 					해당 테이블을 설명하기 위한 대체 텍스트 사용을 정의합니다.<br>
 					일반적으로 점자 화면을 사용하여 웹을 탐색하는 사람들이 정보를 얻을 수 있도록 설명합니다.<br>
