--- a/assets/01-html/08-table/07-tfoot_element.html
+++ b/assets/01-html/08-table/07-tfoot_element.html
@@ -31,7 +31,16 @@
 		</p>
 
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : display:table-footer-group; border-color:inherit; vertical-align:middle;</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>tfoot {</li>
+					<li class="indent">display: table-footer-group;</li>
+					<li class="indent">border-color: inherit;</li>
+					<li class="indent">vertical-align: middle;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
