--- a/assets/01-html/08-table/08-tr_element.html
+++ b/assets/01-html/08-table/08-tr_element.html
@@ -8,14 +8,23 @@
 	<section class="mt_xxl">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			<code>&lt;tr&gt;</code> 요소는 테이블에서 셀들로 이루어진 하나의 행(row)을 정의할 때 사용합니다.
+			<code>&lt;tr&gt;</code> 요소는 테이블에서 셀들로 이루어진 하나의 행(row)을 정의할 때 사용합니다.<br>
 			<code>&lt;tr&gt;</code> 요소는 하나 이상의 <code>&lt;th&gt;</code> 요소(header cell)나 <code>&lt;td&gt;</code> 요소(data cell)를 포함할 수 있습니다.
 		</p>
 		<p class="mt_s">
 			HTML5에서는 <code>&lt;tr&gt;</code> 요소의 align, bgcolor, char, charoff, valign 속성을 더 이상 지원하지 않습니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : display:table-row; border-color:inherit; vertical-align:middle;</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>tr {</li>
+					<li class="indent">display: table-row;</li>
+					<li class="indent">border-color: inherit;</li>
+					<li class="indent">vertical-align: middle;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
