--- a/assets/01-html/08-table/09-th_element.html
+++ b/assets/01-html/08-table/09-th_element.html
@@ -23,7 +23,17 @@
 			HTML5에서는 <code>&lt;th&gt;</code> 요소의 align, axis, bgcolor, char, charoff, height, nowrap, valign, width 속성을 더 이상 지원하지 않습니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : display: table-cell; vertical-align: inherit; font-weight: bold; text-align: center;</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>th {</li>
+					<li class="indent">display: table-cell;</li>
+					<li class="indent">vertical-align: inherit;</li>
+					<li class="indent">font-weight: bold;</li>
+					<li class="indent">text-align: center;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
