--- a/assets/01-html/08-table/10-td_element.html
+++ b/assets/01-html/08-table/10-td_element.html
@@ -25,7 +25,15 @@
 			HTML5에서는 <code>&lt;td&gt;</code> 요소의 abbr, align, axis, bgcolor, char, charoff, height, nowrap, scope, valign, width 속성을 더 이상 지원하지 않습니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : display: table-cell; vertical-align: inherit;</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>td {</li>
+					<li class="indent">display: table-cell;</li>
+					<li class="indent">vertical-align: inherit;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
