--- a/assets/01-html/09-forms/01-form_element.html
+++ b/assets/01-html/09-forms/01-form_element.html
@@ -16,7 +16,15 @@
 			XHTML에서는 name 속성을 더 이상 지원하지 않으므로, name 속성 대신 전역 속성인 id 속성을 사용해야 합니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : form {display: block;margin-top: 0em;}</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>form {</li>
+					<li class="indent">display: block;</li>
+					<li class="indent">margin-top: 0em;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
@@ -227,14 +235,14 @@
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/09-forms/9.1.form_element_simple.html">
-		<h2 class="ve_tit">예제</h2>
+		<h2 class="ve_tit">예제1</h2>
 		<div  class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_s" data-target="html/09-forms/9.1.form_element.html">
-		<h2 class="ve_tit sound_only">예제</h2>
+	<section class="view_editor edit_code mt_l" data-target="html/09-forms/9.1.form_element.html">
+		<h2 class="ve_tit">예제2</h2>
 		<div  class="uk_editor min-height-750" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
