--- a/assets/01-html/09-forms/02-label_element.html
+++ b/assets/01-html/09-forms/02-label_element.html
@@ -30,7 +30,14 @@
 			HTML5에서는 <code>&lt;label&gt;</code> 요소에 form 속성이 새롭게 추가되었으나, 2016년 4월 28일 부로 HTML 표준서에서 제거되었습니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : label {cursor: default;}</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>label {</li>
+					<li class="indent">cursor: default;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
