--- a/assets/01-html/09-forms/03-input_element_part1.html
+++ b/assets/01-html/09-forms/03-input_element_part1.html
@@ -336,7 +336,7 @@
 						<div class="ol_lst_second indent mt_s">
 							<ol>
 								<li class="line_code font14">
-									<strong>"multiple" 이 지정된 경우 유효한 문자열의 몇 가지 예는 다음과 같습니다.</strong>
+									<strong class="mb_sm">"multiple" 이 지정된 경우 유효한 문자열의 몇 가지 예는 다음과 같습니다.</strong>
 									<p>""</p>
 									<p>"me@example"</p>
 									<p>"me@example.org"</p>
@@ -345,7 +345,7 @@
 									<p>"me@example.org,you@example.org, us@example.org"</p>
 								</li>
 								<li class="line_code font14 mt_s">
-									<strong>잘못된 문자열의 예 :</strong>
+									<strong class="mb_sm">잘못된 문자열의 예 :</strong>
 									<p>","</p>
 									<p>"me"</p>
 									<p>"me@example.org you@example.org"</p>
