--- a/assets/01-html/09-forms/03-input_element_part2.html
+++ b/assets/01-html/09-forms/03-input_element_part2.html
@@ -392,26 +392,26 @@
 			<div class="ol_lst indent mt_s">
 				<ol>
 					<li class="line_code font14">
-						<strong>Firefox</strong>
+						<strong class="mb_sm">Firefox</strong>
 						<p>Alt + Shift + key</p>
 						<p>Firefox 57 이상에서는 Control + Option + key 또는 Control + Alt + key</p>
 						<p>Firefox 14 이상에서는 Control + Alt + key</p>
 						<p>Firefox 13 이하에서는 Control + key</p>
 					</li>
 					<li class="line_code font14 mt_s">
-						<strong>Internet Explorer</strong>
+						<strong class="mb_sm">Internet Explorer</strong>
 						<p>Alt + key 없음</p>
 					</li>
 					<li class="line_code font14 mt_s">
-						<strong>Chrome</strong>
+						<strong class="mb_sm">Chrome</strong>
 						<p>Alt + key 또는 Control + Alt + key</p>
 					</li>
 					<li class="line_code font14 mt_s">
-						<strong>Safari</strong>
+						<strong class="mb_sm">Safari</strong>
 						<p>Alt + key(없음) 또는 Control + Alt + key</p>
 					</li>
 					<li class="line_code font14 mt_s">
-						<strong>Opera</strong>
+						<strong class="mb_sm">Opera</strong>
 						<p>Opera 15+ : Alt + key 또는 Control + Alt + key</p>
 						<p>Opera 12 : Shift + Esc</p>
 					</li>
@@ -445,11 +445,11 @@
 			<div class="ol_lst indent mt_s">
 				<ol>
 					<li class="line_code font14">
-						<strong>on</strong>
+						<strong class="mb_sm">on</strong>
 						<p>기본값으로, <code>&lt;input&gt;</code> 요소의 자동 완성 기능을 사용합니다.</p>
 					</li>
 					<li class="line_code font14 mt_s">
-						<strong>off</strong>
+						<strong class="mb_sm">off</strong>
 						<p><code>&lt;input&gt;</code> 요소의 자동 완성 기능을 사용하지 않습니다.</p>
 					</li>
 				</ol>
