--- a/assets/01-html/09-forms/03-input_element_part3.html
+++ b/assets/01-html/09-forms/03-input_element_part3.html
@@ -94,11 +94,11 @@
 			<div class="ol_lst indent mt_s">
 				<ol>
 					<li class="line_code font14">
-						<strong>숫자</strong>
+						<strong class="mb_sm">숫자</strong>
 						<p>허용되는 최대값을 명시합니다.</p>
 					</li>
 					<li class="line_code font14 mt_s">
-						<strong>날짜</strong>
+						<strong class="mb_sm">날짜</strong>
 						<p>허용되는 최대 날짜를 명시합니다.</p>
 					</li>
 				</ol>
@@ -130,11 +130,11 @@
 			<div class="ol_lst indent mt_s">
 				<ol>
 					<li class="line_code font14">
-						<strong>숫자</strong>
+						<strong class="mb_sm">숫자</strong>
 						<p>허용되는 최소값을 명시합니다.</p>
 					</li>
 					<li class="line_code font14 mt_s">
-						<strong>날짜</strong>
+						<strong class="mb_sm">날짜</strong>
 						<p>허용되는 최소 날짜를 명시합니다.</p>
 					</li>
 				</ol>
