--- a/assets/01-html/09-forms/08-datalist_element.html
+++ b/assets/01-html/09-forms/08-datalist_element.html
@@ -18,7 +18,14 @@
 			<code>&lt;datalist&gt;</code> 요소는 HTML5에서 새롭게 추가된 요소입니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : datalist {display: none;}</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>datalist {</li>
+					<li class="indent">display: none;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
