--- a/assets/01-html/09-forms/10-output_element.html
+++ b/assets/01-html/09-forms/10-output_element.html
@@ -15,7 +15,14 @@
 			Internet Explorer는 지원하지 않습니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : output {display: inline;}</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>output {</li>
+					<li class="indent">display: inline;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
