--- a/assets/01-html/09-forms/13-fieldset_element.html
+++ b/assets/01-html/09-forms/13-fieldset_element.html
@@ -16,10 +16,17 @@
 			HTML5에서는 <code>&lt;fieldset&gt;</code> 요소에 새로운 속성들이 추가되었습니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">
-				CSS 기본값 :<br>
-				fieldset {display: block; margin-left: 2px; margin-right: 2px; padding-top: 0.35em; padding-bottom: 0.625em; padding-left: 0.75em; padding-right: 0.75em; border: 2px groove (internal value);}
-			</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>fieldset {</li>
+					<li class="indent">display: block;</li>
+					<li class="indent">margin: 0 2px;</li>
+					<li class="indent">padding: 0.35em 0.75em 0.625em;</li>
+					<li class="indent">border: 2px groove (internal value);</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
