--- a/assets/01-html/09-forms/14-legend_element.html
+++ b/assets/01-html/09-forms/14-legend_element.html
@@ -11,10 +11,18 @@
 			<code>&lt;legend&gt;</code> 요소는 <code>&lt;fieldset&gt;</code> 요소의 캡션(caption)을 정의할 때 사용합니다.<br>
 			HTML5에서는 <code>&lt;legend&gt;</code> 요소의 align 속성을 더 이상 지원하지 않습니다.
 		</p>
+
 		<div class="line_code mt_m">
-			<p class="t_blue">
-				CSS 기본값 : legend {display: block; padding-left: 2px; padding-right: 2px; border: none;}
-			</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>legend {</li>
+					<li class="indent">display: block;</li>
+					<li class="indent">padding: 0 2px;</li>
+					<li class="indent">border: none;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
