--- a/assets/01-html/10-structure/02-html5_document.html
+++ b/assets/01-html/10-structure/02-html5_document.html
@@ -15,25 +15,25 @@
 			<code>&lt;aside&gt;</code>, <code>&lt;footer&gt;</code>, <code>&lt;header&gt;</code>, 그리고 <code>&lt;nav&gt;</code> 요소들 안에 포함된 콘텐츠입니다.
 		</p>
 		<p class="mt_s">
-			각 섹션은 자기들만의 제목 계층을 가질 수 있습니다. 그래서, 중첩된 섹션이라도 &lt;h1&gt; 제목을 가질 수 있습니다.
+			각 섹션은 자기들만의 제목 계층을 가질 수 있습니다. 그래서, 중첩된 섹션이라도 <code>&lt;h1&gt;</code> 제목을 가질 수 있습니다.
 		</p>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/10-structure/10.2.html5_document_layout.html">
-		<h3 class="ve_tit">HTML5 기본 레이아웃</h3>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<h2 class="ve_tit">HTML5 기본 레이아웃</h2>
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/10-structure/10.2.html5_document_basic.html">
-		<h3 class="ve_tit">HTML5 콘텐츠 기본 구조</h3>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<h2 class="ve_tit">HTML5 콘텐츠 기본 구조</h2>
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<section class="mt_s">
+	<section class="mt_s indent">
 		<h2 class="sound_only">설명</h2>
 		<div class="line_code">
 			위에 있는 HTML 코드에선 가장 윗 단계에 두 개의 섹션이 정의되었으며,
