--- a/assets/01-html/10-structure/03-frameset_document.html
+++ b/assets/01-html/10-structure/03-frameset_document.html
@@ -15,9 +15,14 @@
 		<p class="mt_s">
 			HTML5에서는 <code>&lt;frameset&gt;</code> 요소를 더 이상 지원하지 않습니다.<br>
 			더 이상 지원되지 않는 <code>&lt;frame&gt;</code> 요소를 사용하면서 HTML 유효성 검사를 통과하기 위해서는 다음의 두 가지 방법처럼 DOCTYPE을 선언해야 합니다.<br>
-			<code>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01 Transitional//EN&quot; &quot;http://www.w3.org/TR/html4/loose.dtd&quot;&gt;</code><br>
-			<code>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01 Frameset//EN&quot; &quot;http://www.w3.org/TR/html4/frameset.dtd&quot;&gt;</code>
 		</p>
+
+		<div class="line_code_box line_code_number mt_m">
+			<ul>
+				<li>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01 Transitional//EN&quot; &quot;http://www.w3.org/TR/html4/loose.dtd&quot;&gt;</li>
+				<li>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.01 Frameset//EN&quot; &quot;http://www.w3.org/TR/html4/frameset.dtd&quot;&gt;</li>
+			</ul>
+		</div>
 	</section>
 
 	<section class="txt_ex mt_l">
