--- a/assets/01-html/11-models/models.html
+++ b/assets/01-html/11-models/models.html
@@ -207,13 +207,13 @@
 			</div>
 		</article>
 
-		<p class="indent mt_l">위에서 언급하지 않은 요소들은 다음과 같습니다.</p>
+		<p class="indent mt_l t_black font-16 weight-600">위에서 언급하지 않은 요소들은 다음과 같습니다.</p>
 	</section>
 
 
 	<!-- details element -->
-	<section class="txt_ex indent mt_xxl">
-		<h2 class="html5">11.1. 인터랙티브 요소 <mark>&lt;details&gt;</mark> element</h2>
+	<section class="txt_ex indent_max mt_xxl">
+		<h2 class="ml_mn html5">11.1. 인터랙티브 요소 <mark>&lt;details&gt;</mark> element</h2>
 
 		<blockquote class="uk_note mt_l" role="note">
 			<h3 class="sound_only">요약 설명</h3>
