--- a/assets/01-html/05-textLevel/04-strong_element.html
+++ b/assets/01-html/05-textLevel/04-strong_element.html
@@ -12,7 +12,14 @@
 			브라우저는 일반적으로 <code>&lt;strong&gt;</code> 요소의 콘텐츠를 굵은 텍스트로 표현합니다.
 		</p>
 		<div class="line_code mt_s">
-			<p class="t_blue"><b>CSS 기본값 : strong {font-weight: bold;}</b></p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>strong {</li>
+					<li class="indent">font-weight: bold;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
