--- a/assets/01-html/05-textLevel/06-br_element.html
+++ b/assets/01-html/05-textLevel/06-br_element.html
@@ -15,9 +15,20 @@
 		<p class="mt_s">
 			<code>&lt;br&gt;</code> 요소는 빈 태그(empty)로, 종료 태그가 존재하지 않습니다.<br>
 			HTML4에서는 <code>&lt;br&gt;</code> 요소를 닫지 않지만, XHTML에서는 다음과 같이 반드시 태그를 닫아야만 합니다.<br>
-			(ex. <code>&lt;br&gt;</code> vs. <code>&lt;br /&gt;</code>)<br>
 			HTML5에서는 <code>&lt;br&gt;</code> 요소의 종료 태그 닫아도 되고 닫지 않는것 모두 허용합니다.
 		</p>
+		<div class="line_code mt_s">
+			<strong class="t_blue weight-600">ex :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>/* html4 */</li>
+					<li>&lt;br /&gt;</li>
+					<li></li>
+					<li>/* html5 */</li>
+					<li>&lt;br&gt;</li>
+				</ul>
+			</div>
+		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.6.br_element.html">
