--- a/assets/01-html/05-textLevel/13-q_element.html
+++ b/assets/01-html/05-textLevel/13-q_element.html
@@ -13,12 +13,20 @@
 			다른 출처로부터 인용된 인용 블록을 정의할 때는 <code>&lt;q&gt;</code> 요소보다는 <code>&lt;blockquote&gt;</code> 요소를 사용하는 것이 바람직합니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">
-				<b>CSS 기본값 : </b><br>
-				<span class="indent">q {display: inline;}</span><br>
-				<span class="indent">q:before {content: open-quote;}</span><br>
-				<span class="indent">q:after {content: close-quote;}</span>
-			</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>q {</li>
+					<li class="indent">display: inline;</li>
+					<li>}</li>
+					<li>q:before {</li>
+					<li class="indent">content: open-quote;</li>
+					<li>}</li>
+					<li>q:after {</li>
+					<li class="indent">content: close-quote;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 		<ol class="indent mt_m">
 			<li>
