--- a/assets/01-html/05-textLevel/14-code_element.html
+++ b/assets/01-html/05-textLevel/14-code_element.html
@@ -13,9 +13,14 @@
 			<code>&lt;code&gt;</code> 요소는 HTML5에서도 여전히 지원되지만, 대신 CSS를 사용하면 더욱 다양한 효과를 얻을 수 있습니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">
-				<b>CSS 기본값 : code {font-family: monospace;}</b>
-			</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>code {</li>
+					<li class="indent">font-family: monospace;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
