--- a/assets/01-html/05-textLevel/18-time_element.html
+++ b/assets/01-html/05-textLevel/18-time_element.html
@@ -11,7 +11,7 @@
 			<code>&lt;time&gt;</code> 요소는 사람이 읽을 수 있는(human-readable) 형태의 날짜와 시간 데이터를 정의할 때 사용합니다.<br>
 			<code>&lt;time&gt;</code> 요소는 대부분의 웹 브라우저에서 특별한 형태로 렌더링되지는 않지만,
 			검색 엔진의 검색 결과 향상이나 알림 및 스케줄과 같은 사용자 기능을 위해 날짜와 시간 데이터를
-			기계가 읽을 수 있는(machine-readable) 형태로 변환해주는 datetime 속성을 포함할 수 있습니다
+			기계가 읽을 수 있는(machine-readable) 형태로 변환해주는 datetime 속성을 포함할 수 있습니다.
 		</p>
 		<p class="mt_s">
 			<code>&lt;time&gt;</code> 요소는 HTML5에서 새롭게 추가된 요소입니다.<br>
