--- a/assets/01-html/05-textLevel/19-samp_element.html
+++ b/assets/01-html/05-textLevel/19-samp_element.html
@@ -14,9 +14,14 @@
 			웹 사이트 또는 앱의 JavaScript 코드에서 생성된 출력을 위한 컨테이너 역할을 하는 요소가 필요한 경우 <code>&lt;output&gt;</code>요소를 사용해야 합니다 .
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">
-				<b>CSS 기본값 : samp {font-family: monospace;}</b>
-			</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>samp {</li>
+					<li class="indent">font-family: monospace;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
