--- a/assets/01-html/06-embedded/04-area_element.html
+++ b/assets/01-html/06-embedded/04-area_element.html
@@ -13,7 +13,14 @@
 		</p>
 
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : area {display: none;}</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>area {</li>
+					<li class="indent">display: none;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
