--- a/assets/01-html/06-embedded/08-picture_element.html
+++ b/assets/01-html/06-embedded/08-picture_element.html
@@ -8,7 +8,7 @@
 	<section class="mt_xxl">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			이미지를 삽입합니다.(&lt;img&gt;의 srcset, sizes로 대체 가능)<br>
+			이미지를 삽입합니다.(<code>&lt;img&gt;</code>의 srcset, sizes로 대체 가능)<br>
 			<code>&lt;picture&gt;</code> 요소는 <code>&lt;img&gt;</code> 요소의 다중 이미지 리소스(multiple image resources)를 위한 컨테이너를 정의할 때 사용합니다.<br>
 			<code>&lt;picture&gt;</code> 요소는 뷰포트(viewport)의 너비에 따라 커지거나 작아지는 하나의 이미지를 사용하는 대신 서로 다른 디스플레이나 기기에서 해당 뷰포트에 알맞게 채워질 수 있도록 여러 개의 이미지 중에서 적절한 이미지를 사용할 수 있도록 합니다. 이러한 요소는 웹 개발자가 이미지의 리소스를 보다 유연하게 지정할 수 있도록 해주므로, 반응형 디자인(responsive design)에서 주로 사용합니다.<br>
 			<code>&lt;picture&gt;</code> 요소는 0개 이상의 <code>&lt;source&gt;</code> 요소와 하나의 <code>&lt;img&gt;</code> 요소로 구성되며, 브라우저는 <code>&lt;source&gt;</code> 요소 중에서 해당 뷰포트와 가장 잘 어울리는 <code>&lt;source&gt;</code> 요소를 다음과 같은 방법을 사용하여 선택합니다.<br>
