--- a/assets/01-html/06-embedded/13-param_element.html
+++ b/assets/01-html/06-embedded/13-param_element.html
@@ -15,7 +15,14 @@
 			HTML5에서는 <code>&lt;param&gt;</code>요소에서 type, valuetype 속성을 더 이상 지원하지 않습니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : param {display: none;}</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>param {</li>
+					<li class="indent">display: none;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
