--- a/assets/01-html/08-table/05-thead_element.html
+++ b/assets/01-html/08-table/05-thead_element.html
@@ -21,7 +21,16 @@
 			HTML5에서는 <code>&lt;thead&gt;</code> 요소의 align, char, charoff, valign 속성을 더 이상 지원하지 않습니다.
 		</p>
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : display:table-header-group; border-color:inherit; vertical-align:middle;</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>thead {</li>
+					<li class="indent">display: table-header-group;</li>
+					<li class="indent">border-color: inherit;</li>
+					<li class="indent">vertical-align: middle;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
