--- a/assets/01-html/08-table/06-tbody_element.html
+++ b/assets/01-html/08-table/06-tbody_element.html
@@ -21,7 +21,7 @@
 		<p class="mt_s">
 			<code>&lt;tbody&gt;</code> 요소는 <code>&lt;table&gt;</code> 요소의 자식 요소로써,
 			반드시 모든 <code>&lt;caption&gt;</code>, <code>&lt;colgroup&gt;</code>, <code>&lt;thead&gt;</code> 요소 다음에 위치해야 합니다.<br>
-			또한, &lt;tbody&gt; 요소는 반드시 하나 이상의 &lt;tr&gt; 요소를 포함하고 있어야 합니다.
+			또한, <code>&lt;tbody&gt;</code> 요소는 반드시 하나 이상의 <code>&lt;tr&gt;</code> 요소를 포함하고 있어야 합니다.
 		</p>
 		<p class="mt_s">
 			<code>&lt;thead&gt;</code>와 <code>&lt;tbody&gt;</code>, <code>&lt;tfoot&gt;</code> 요소는 기본적으로 웹 페이지의 레이아웃에 전혀 영향을 주지 않지만, 이 요소들의 스타일을 CSS를 사용하여 변경할 수는 있습니다.
@@ -31,7 +31,16 @@
 		</p>
 
 		<div class="line_code mt_m">
-			<p class="t_blue">CSS 기본값 : display:table-row-group; border-color:inherit; vertical-align:middle;</p>
+			<strong class="t_blue weight-600">CSS 기본값 :</strong>
+			<div class="line_code_box line_code_number indent mt_s">
+				<ul>
+					<li>tbody {</li>
+					<li class="indent">display: table-row-group;</li>
+					<li class="indent">border-color: inherit;</li>
+					<li class="indent">vertical-align: middle;</li>
+					<li>}</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 
