--- a/assets/01-html/09-forms/09-textarea_element.html
+++ b/assets/01-html/09-forms/09-textarea_element.html
@@ -256,11 +256,11 @@
 			<div class="ol_lst indent mt_s">
 				<ol>
 					<li class="line_code font14">
-						<strong>soft</strong>
+						<strong class="mb_sm">soft</strong>
 						<p>기본값으로, 폼 데이터가 서버로 제출될 때 입력된 텍스트를 줄바꿈하지 않음.</p>
 					</li>
 					<li class="line_code font14 mt_s">
-						<strong>hard</strong>
+						<strong class="mb_sm">hard</strong>
 						<p>폼 데이터가 서버로 제출될 때 입력된 텍스트를 줄바꿈합니다. 단, hard 속성값을 사용할 경우에는 반드시 cols 속성이 명시되어 있어야 합니다.</p>
 					</li>
 				</ol>
