--- a/assets/01-html/10-structure/01-html4_document.html
+++ b/assets/01-html/10-structure/01-html4_document.html
@@ -13,25 +13,25 @@
 			섹션은 HTML <code>&lt;div&gt;</code> 요소와 함께 그 안에 있는
 			제목을 정의하는 HTML 제목 요소(<code>&lt;h1&gt;</code> ~ <code>&lt;h6&gt;</code>)를 써서 정의됩니다.<br>
 			이런 HTML 구획 요소와 HTML 제목 요소의 관계가 문서의 구조와 그 아웃라인을 결정짓게 됩니다.<br>
-			보통 div 요소로 레이아웃 구조를 표현합니다.
+			보통 <code>&lt;div&gt;</code> 요소로 레이아웃 구조를 표현합니다.
 		</p>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/10-structure/10.1.html4_document_layout.html">
 		<h3 class="ve_tit">HTML4 기본 레이아웃</h3>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
 	<section class="view_editor edit_code mt_l" data-target="html/10-structure/10.1.html4_document_basic.html">
 		<h3 class="ve_tit">HTML4 콘텐츠 기본 구조1</h3>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<section class="mt_s">
+	<section class="mt_s indent">
 		<h2 class="sound_only">설명</h2>
 		<div class="line_code">
 			위의 구조는 다음과 같은 문서 아웃라인을 가지게 됩니다.<br>
@@ -44,12 +44,12 @@
 
 	<section class="view_editor edit_code mt_l" data-target="html/10-structure/10.1.html4_document_basic2.html">
 		<h3 class="ve_tit">HTML4 콘텐츠 기본 구조2</h3>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<section class="mt_s">
+	<section class="mt_s indent">
 		<h2 class="sound_only">설명</h2>
 		<div class="line_code">
 			위와 같이 새로운 섹션을 정의할 때 <code>&lt;div&gt;</code> 요소가 꼭 필요한 것은 아닙니다. 단순히 HTML 제목 요소만 있으면 새로운 섹션이 시작됨을 자동으로 암시해 줍니다.<br>
