- css 컨텐츠 수정

--- a/assets/02-css/01-cssStart/03-css_history.html
+++ b/assets/02-css/01-cssStart/03-css_history.html
@@ -8,7 +8,7 @@
 	<blockquote class="uk_note mt_xxl" role="note">
 		<h2 class="sound_only">요약 설명</h2>
 		<p>
-			CSS는 지속적으로 새로운 버전이 나오고 있다. 1996년에 도입된 CSS 1은 CSS의 바탕이 되었습니다.<br>
+			CSS는 지속적으로 새로운 버전이 나오고 있고, 1996년에 도입된 CSS 1은 CSS의 바탕이 되었습니다.<br>
 			CSS의 표준으로는 CSS 2.1이 있으며 이전 버전에 비하여 새로운 기능과 도구가 추가 되었습니다.<br>
 			대다수의 웹 브라우저는 CSS 2.1를 무난하게 지원한다.(인터넷 익스플로러의 경우, 버전 7이 되면서 CSS 2.1을 지원합니다.)<br>
 			현재 W3C에서는 CSS 3을 표준으로 만들고 있습니다.
