--- a/assets/02-css/01-cssStart/07-css_cascading.html
+++ b/assets/02-css/01-cssStart/07-css_cascading.html
@@ -12,10 +12,10 @@
 			'상속'이란 하위 요소(자식, 자손)가 상위 요소(부모, 조상)로부터 특정 CSS 속성을 물려받는 것을 의미합니다.<br>
 			상속의 개념이 없다면 글꼴, 글씨크기, 글색상 같은 스타일 속성들을 모든 요소마다 각각 지정해줘야 할 것입니다.<br>
 			그러므로 상속은 CSS에서 생산성을 높이기 위한 중요한 기능입니다.<br>
-			하지만 모든 CSS 속성이 상속되는 것은 아닙니다. margin 같은 경우는 하위 요소가 상위 요소의 속성 값들을 물려받는 경우가 거의 없으므로 상속되지 않습니다.<br>
+			하지만 모든 CSS 속성이 상속되는 것은 아닙니다. <code>margin</code> 같은 경우는 하위 요소가 상위 요소의 속성 값들을 물려받는 경우가 거의 없으므로 상속되지 않습니다.<br>
 			대부분의 경우, 상식적으로 생각하면 어떤 속성들이 상속되고 어떤 것들이 그렇지 않을지 쉽게 짐작할 수 있습니다.<br>
 			구체적인 상속 여부를 확인하려면 CSS 2.1 명세의 속성 요약 테이블을 참고하세요.<br>
-			상속되지 않는 속성들은, inherit 속성값을 사용하여 명시적으로 상속받게 할 수 있습니다.
+			상속되지 않는 속성들은, <code>inherit</code> 속성값을 사용하여 명시적으로 상속받게 할 수 있습니다.
 		</p>
 
 		<div class="ol_lst indent mt_s">
@@ -23,22 +23,22 @@
 				<li class="line_code font14">
 					<strong>inherit(상속) 키워드</strong>
 					<p>모든 요소의 속성이 상속된 값으로 변경되도록 지정합니다.</p>
-					<p>inherit 키워드는 속성이 부모 요소에서 값을 상속하도록 지정합니다.</p>
-					<p>inherit 키워드는 모든 CSS 속성 및 모든 HTML 요소에 사용할 수 있습니다.</p>
-					<p>inherit 키워드는 Internet Explorer(이하 IE) 7 및 이전 버전에서 지원되지 않습니다. IE 8에는 !DOCTYPE이 필요합니다.</p>
+					<p><code>inherit</code> 키워드는 속성이 부모 요소에서 값을 상속하도록 지정합니다.</p>
+					<p><code>inherit</code> 키워드는 모든 CSS 속성 및 모든 HTML 요소에 사용할 수 있습니다.</p>
+					<p><code>inherit</code> 키워드는 Internet Explorer(이하 IE) 7 및 이전 버전에서 지원되지 않습니다. IE 8에는 !DOCTYPE이 필요합니다.</p>
 					<p>IE 8+부터 지원합니다.</p>
 				</li>
 				<li class="line_code font14 mt_s">
 					<strong>initial(초기) 키워드</strong>
 					<p>모든 요소의 속성을 초기값으로 변경하도록 지정합니다.</p>
-					<p>initial 키워드는 CSS 속성을 기본값으로 설정하는데 사용됩니다.</p>
-					<p>initial 키워드는 모든 CSS 속성 및 모든 HTML 요소에 사용할 수 있습니다.</p>
-					<p>IE 11 및 이전 버전에서는 initial 키워드가 지원되지 않습니다.</p>
+					<p><code>initial</code> 키워드는 CSS 속성을 기본값으로 설정하는데 사용됩니다.</p>
+					<p><code>initial</code> 키워드는 모든 CSS 속성 및 모든 HTML 요소에 사용할 수 있습니다.</p>
+					<p>IE 11 및 이전 버전에서는 <code>initial</code> 키워드가 지원되지 않습니다.</p>
 					<p>
-						initial 키워드는 IE에서는 Not Supported입니다.<br>
+						<code>initial</code> 키워드는 IE에서는 Not Supported입니다.<br>
 						따라서 CSS에서 default 값을 IE에서도 포함하여 이용하는 방법에는<br>
-						width 속성의 경우 initial 대신 auto를 사용하고, background-color 속성의 경우 initial 대신 transparent를 사용합니다.<br>
-						min-width 속성의 경우 initial 대신 inherit를 사용해야 합니다.
+						<code>width</code> 속성의 경우 <code>initial</code> 대신 <code>auto</code>를 사용하고, <code>background-color</code> 속성의 경우 <code>initial</code> 대신 <code>transparent</code>를 사용합니다.<br>
+						<code>min-width</code> 속성의 경우 <code>initial</code> 대신 <code>inherit</code>를 사용해야 합니다.
 					</p>
 				</li>
 				<li class="line_code font14 mt_s">
@@ -55,15 +55,17 @@
 					<strong>all 속성</strong>
 					<p>all 속성 사용하면 모든 속성을 초기, 상속, 되돌림 또는 설정 해제 상태로 한 번에 재설정 할 수 있습니다.</p>
 					<p>IE, Edge에서는 지원되지 않습니다.</p>
-					<p>
-						/* Global values */<br>
-						all: initial;<br>
-						all: inherit;<br>
-						all: unset;<br><br>
-
-						/* CSS Cascading and Inheritance Level 4 */<br>
-						all: revert;
-					</p>
+					<div class="line_code_box line_code_number mt_2">
+						<ul>
+							<li>/* Global values */</li>
+							<li>all: initial;</li>
+							<li>all: inherit;</li>
+							<li>all: unset;</li>
+							<li></li>
+							<li>/* CSS Cascading and Inheritance Level 4 */</li>
+							<li>all: revert;</li>
+						</ul>
+					</div>
 				</li>
 			</ol>
 		</div>
@@ -90,15 +92,15 @@
 		<h2>중요도</h2>
 		<p class="indent">
 			CSS 선언의 중요도는, 그것이 '어디'에서 사용되었는지에 따라 다릅니다. 다음의 순서대로, 나중 선언이 앞선 선언을 덮어 쓰고 요소에 적용됩니다.<br>
-			CSS 속성을 줄 때 !important를 뒤에 붙이면 우선순위가 가장 높아집니다.
+			CSS 속성을 줄 때 <code>!important</code>를 뒤에 붙이면 우선순위가 가장 높아집니다.
 		</p>
 		<div class="ol_lst indent mt_s">
 			<ol class="indent mt_sm">
 				<li>브라우저 스타일시트</li>
 				<li>사용자 스타일시트의 일반 선언</li>
 				<li>저작자 스타일시트의 일반 선언</li>
-				<li>저작자 스타일시트의 !important</li>
-				<li>사용자 스타일시트의 !important</li>
+				<li>저작자 스타일시트의 <code>!important</code></li>
+				<li>사용자 스타일시트의 <code>!important</code></li>
 			</ol>
 		</div>
 	</section>
