--- a/assets/02-css/02-cssBeginner/01-css_units.html
+++ b/assets/02-css/02-cssBeginner/01-css_units.html
@@ -18,7 +18,7 @@
 			프로퍼티 값이 0인 경우, 단위를 생략할 수 있습니다.<br>
 			단위를 사용할 때, 앞의 숫자와 단위 사이에 공백을 두지 않습니다.(예: 2em, 3px, 5in(○) / 2 em, 3 px, 5 in(&times;))<br>
 			좀 더 상세한 내용은 각 속성들을 설명할 때 다루도록 하겠습니다.<br>
-			font-size의 단위를 설정하는 방법은 크게 절대 단위(px)와 상대 단위(%,em) 등이 있는데 모바일이나 반응형을 고려할 시 상대 단위를 사용하는 것을 권장합니다.<br>
+			<code>font-size</code>의 단위를 설정하는 방법은 크게 절대 단위(px)와 상대 단위(%,em) 등이 있는데 모바일이나 반응형을 고려할 시 상대 단위를 사용하는 것을 권장합니다.<br>
 			예시로 px, pt, cm 등의 단위로 지정하거나 xx-small, x-small, small, medium, large, x-large, xx-large 중에서 선택 가능하며,
 			medium은 기본값으로 12pt = 19px = 13m = 100%, *구 IE 버전의 경우, small이 기본값이라 doctype을 선언해야 medium이 기본값으로 나옵니다.
 		</p>
