- html 이미지 제작 및 수정

--- a/assets/01-html/06-embedded/01-iframe_element.html
+++ b/assets/01-html/06-embedded/01-iframe_element.html
@@ -263,8 +263,8 @@
 		</div>
 
 		<div class="view_editor edit_code mt_l" data-target="html/06-embedded/6.1.iframe_element.html">
-			<h3 class="ve_tit">예제</h3>
-			<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+			<h3 class="ve_tit">예제aaa</h3>
+			<div class="uk_editor min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</div>
