--- a/assets/01-html/08-table/09-th_element.html
+++ b/assets/01-html/08-table/09-th_element.html
@@ -89,8 +89,8 @@
 	</section>
 
 	<figure class="img_figure mt_l">
-		<img src="/ukncs/images/html/img_table_rowcol.png" alt="html 요소 설명">
-		<figcaption>[HTML 요소의 부분 설명]</figcaption>
+		<img src="/ukncs/images/html/img_table_rowcol.svg" alt="html 요소 설명">
+		<figcaption>[table 요소의 부분 설명]</figcaption>
 	</figure>
 
 	<section class="view_editor edit_code mt_l" data-target="html/08-table/8.9.th_element.html">
